src/objects/Restriction_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Agent_Type__c</fullName>
        <label>Agent Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Onshore</fullName>
                </value>
                <value>
                    <fullName>Offshore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Restricted_Topic__c</fullName>
        <label>Restricted Topic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RestrictionConfigurationExternalID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>RestrictionConfigurationExternalID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Restriction_Type__c</fullName>
        <label>Restriction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Restriction Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Topic__c</columns>
        <columns>Agent_Type__c</columns>
        <columns>Restricted_Topic__c</columns>
        <columns>Restriction_Type__c</columns>
        <columns>Is_Active__c</columns>
        <columns>RestrictionConfigurationExternalID__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Restriction_02</fullName>
        <columns>NAME</columns>
        <columns>Topic__c</columns>
        <columns>Agent_Type__c</columns>
        <columns>Restricted_Topic__c</columns>
        <columns>Restriction_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Restriction_Type__c</field>
            <operation>equals</operation>
            <value>02</value>
        </filters>
        <label>Restriction 02</label>
    </listViews>
    <listViews>
        <fullName>Restriction_05</fullName>
        <columns>NAME</columns>
        <columns>Topic__c</columns>
        <columns>Agent_Type__c</columns>
        <columns>Restricted_Topic__c</columns>
        <columns>Restriction_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Restriction_Type__c</field>
            <operation>equals</operation>
            <value>05</value>
        </filters>
        <label>Restriction 05</label>
    </listViews>
    <listViews>
        <fullName>Restriction_06</fullName>
        <columns>NAME</columns>
        <columns>Topic__c</columns>
        <columns>Agent_Type__c</columns>
        <columns>Restricted_Topic__c</columns>
        <columns>Restriction_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Restriction_Type__c</field>
            <operation>equals</operation>
            <value>06</value>
        </filters>
        <label>Restriction 06</label>
    </listViews>
    <listViews>
        <fullName>Restriction_07</fullName>
        <columns>NAME</columns>
        <columns>Topic__c</columns>
        <columns>Agent_Type__c</columns>
        <columns>Restricted_Topic__c</columns>
        <columns>Restriction_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Restriction_Type__c</field>
            <operation>equals</operation>
            <value>07</value>
        </filters>
        <label>Restriction 07</label>
    </listViews>
    <listViews>
        <fullName>Restriction_08</fullName>
        <columns>NAME</columns>
        <columns>Topic__c</columns>
        <columns>Agent_Type__c</columns>
        <columns>Restricted_Topic__c</columns>
        <columns>Restriction_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Restriction_Type__c</field>
            <operation>equals</operation>
            <value>08</value>
        </filters>
        <label>Restriction 08</label>
    </listViews>
    <nameField>
        <displayFormat>RC-{000000000}</displayFormat>
        <label>Restriction Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Restriction Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>